--- a/RanCyan/RanCyan.Android/RanCyan.Android.csproj
+++ b/RanCyan/RanCyan.Android/RanCyan.Android.csproj
@@ -79,6 +79,9 @@
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.6.292</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Essentials">
+      <Version>1.3.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.FFImageLoading">
       <Version>2.4.11.982</Version>
     </PackageReference>
