--- a/RanCyan/RanCyan.Android/RanCyan.Android.csproj
+++ b/RanCyan/RanCyan.Android/RanCyan.Android.csproj
@@ -70,6 +70,9 @@
     <PackageReference Include="PCLStorage">
       <Version>1.0.2</Version>
     </PackageReference>
+    <PackageReference Include="Plugin.NetStandardStorage">
+      <Version>1.0.7</Version>
+    </PackageReference>
     <PackageReference Include="Prism.DryIoc.Forms">
       <Version>7.2.0.1422</Version>
     </PackageReference>
