--- a/RanCyan/RanCyan/RanCyan.csproj
+++ b/RanCyan/RanCyan/RanCyan.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <PackageReference Include="AiForms.CollectionView" Version="0.3.10-pre" />
     <PackageReference Include="PCLStorage" Version="1.0.2" />
+    <PackageReference Include="Plugin.NetStandardStorage" Version="1.0.7" />
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.2.0.1422" />
     <PackageReference Include="ReactiveProperty" Version="6.2.0" />
     <PackageReference Include="sqlite-net-pcl" Version="1.6.292" />
