--- a/RanCyan/RanCyan.iOS/RanCyan.iOS.csproj
+++ b/RanCyan/RanCyan.iOS/RanCyan.iOS.csproj
@@ -198,6 +198,9 @@
     <PackageReference Include="ReactiveProperty">
       <Version>5.3.0</Version>
     </PackageReference>
+    <PackageReference Include="System.Text.Json">
+      <Version>4.7.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Essentials">
       <Version>1.5.1</Version>
     </PackageReference>
