--- a/RanCyan/RanCyan.UWP/RanCyan.UWP.csproj
+++ b/RanCyan/RanCyan.UWP/RanCyan.UWP.csproj
@@ -109,6 +109,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Renderers\KeyDownContentPageRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
