--- a/RanCyan/RanCyan.Android/Properties/AndroidManifest.xml
+++ b/RanCyan/RanCyan.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="3.3.0" package="info.gunshi.RanCyan" android:installLocation="auto" android:versionCode="20">
-	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
-	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<application android:label="乱ちゃんProject" android:icon="@mipmap/ic_launcher"></application>
+  <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="29" />
+  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+  <application android:label="乱ちゃんProject" android:icon="@mipmap/ic_launcher" android:debuggable="false"></application>
 </manifest>
